K8s/customwordpress/wordpress/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  replicas: 1
  selector:
    matchLabels:
      role: wordpress
  template:
    metadata:
      labels:
        role: wordpress
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: wordpress
          image: cloudgenius/wordpress:6.4.3
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
          volumeMounts:
            - name: wordpressfiles
              mountPath: /var/www/html/wp-content
      volumes:
        - name: wordpressfiles
          persistentVolumeClaim:
            claimName: wordpressfiles
