K8s/customwordpress/wordpress/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    # kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: ronnie.ronald.devfun.me
      http:
        paths:
          - backend:
              service:
                name: wordpress
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "ronnie.ronald.devfun.me"
      secretName: wordpress-tls
